--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@ body
 	font-weight: bold;
 	background-color: #ccccff;
 	margin: 0px;
+	font-size: small;
 	overflow: hidden;
 }
 div#controls {
@@ -15,9 +16,10 @@ div#controls {
     left: 0;
     top: 10%;
 	height: 100%;
-	width: 25%;
+	width: 270px;
 }
 div#points {
+	padding: 10px;
 	border-style: solid;
 	border-width: 3px;
 	background-color: white;
@@ -25,5 +27,14 @@ div#points {
     right: 0;
 	height: 100%;
     top: 10%;
-	width: 20%;
+	width: 300px;
+}
+div#outputPoints {
+	position: fixed;
+	bottom: 2%;
+	width: 300px;
+}
+select#pointsOutput {
+	overflow: auto;
+	width: 80%;
 }
