--- a/css/main.css
+++ b/css/main.css
@@ -14,9 +14,10 @@ div#controls {
 	background-color: white;
     position: fixed;
     left: 0;
-    top: 6%;
+    top: 40px;
 	height: 100%;
 	width: 270px;
+    overflow-y: auto;
 }
 div#points {
 	padding: 10px;
@@ -26,13 +27,15 @@ div#points {
     position: fixed;
     right: 0;
 	height: 100%;
-    top: 6%;
+    top: 40px;
 	width: 300px;
+    overflow-y: auto;
 }
 div#outputPoints {
 	position: fixed;
 	bottom: 2%;
 	width: 300px;
+
 }
 select#pointsOutput {
 	overflow: auto;
