Semi large update. Changed background color, points to spheres instead of cubes, started using updated minified three.js, heavily improved mouse selector feature (still with bugs), and improved fluidity of program :)

--- a/css/main.css
+++ b/css/main.css
@@ -3,10 +3,13 @@ body
 	text-align: center;
 	font-family: Monospace;
 	font-weight: bold;
-	background-color: #ccccff;
+	background-color: #000000;
 	margin: 0px;
 	font-size: small;
 	overflow: hidden;
+}
+div#ThreeJS {
+    left: 0px;
 }
 div#controls {
 	border-style: solid;
@@ -46,4 +49,11 @@ div#authorInfo {
 	bottom: 2%;
 	width: 270px;
 	padding: 10px;
+}
+div#title {
+    position: absolute;
+    top: 10px;
+    width: 100%;
+    text-align: center;
+    color: white;        
 }
